--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=caretaker_v2
-spring.datasource.url=jdbc:mysql://localhost:3306/dbcaretaker
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/dbcaretaker_v2
+spring.datasource.username=diana
+spring.datasource.password=mfwhore
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
